--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2021"
 
 [dependencies]
 itertools = "0.11.0"
-nom = "7.1.3"
+serde = { version = "1.0.192", features = ["derive"] }
+
+# serde_json is just for the example, not required in general
+serde_json = "1.0.108"
