--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,5 @@ edition = "2021"
 [dependencies]
 itertools = "0.11.0"
 serde = { version = "1.0.192", features = ["derive"] }
-
-# serde_json is just for the example, not required in general
 serde_json = "1.0.108"
+corosensei = "0.1.4"
